--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,7 @@
     --hoverBackground: rgba(116, 116, 116, 0.398);
     --box-background-color:white;
     --overlay-icon-color:rgba(240, 240, 255, 0.38);
+    --border-color:rgb(57, 60, 64);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -25,6 +26,7 @@
     --box-background-color:#2A2D3E;
     --hoverBackground: rgba(116, 116, 116, 0.398);
     --overlay-icon-color:rgba(49, 49, 73, 0.38);
+    --border-color:rgb(57, 60, 64);
   }
 }
 
