updated the layout of the orders page - complete layout

--- a/src/components/orders/table/OrdersTable.module.scss
+++ b/src/components/orders/table/OrdersTable.module.scss
@@ -1,10 +1,15 @@
 @import "../../../mixin";
 
 .container {
+    
     .orderContainer {
+        transition: all .3s ease-in-out;
         .orderList {
-
+            transition: all .3s ease-in-out;
             &Item {
+                &:not(:last-child){
+                    margin-bottom:1rem;
+                }
                 .content {
                     background-color: var(--box-background-color);
                     padding: .6rem 1rem;
@@ -21,7 +26,7 @@
                     h3 {
                         font-size: 1.4rem;
                         font-weight: 600;
-                        color:var(--defined-text-color);
+                        color: var(--defined-text-color);
                     }
 
                     p {
@@ -45,9 +50,10 @@
                         }
 
                         p {
-                            color: var(--yellow-color);
+                            color: var(--blue-color);
                             padding-top: .5rem;
                             font-size: 1.2rem;
+                            font-weight:400;
                         }
                     }
 
@@ -67,13 +73,13 @@
                         h3 {}
 
                         p {
+                            font-size:2.5rem;
+                            font-weight:200;
                             sup {
                                 font-size: 1.2rem;
                                 font-weight: 400;
                             }
 
-                            font-size:2.5rem;
-                            font-weight:200;
                         }
                     }
 
@@ -114,26 +120,28 @@
 
                 .orderDetailsContainer {
                     width: 95%;
+                    transition:all .3s ease-in-out;
                     margin: 0 auto;
                     margin-top: 1rem;
                     
+
                     &Top {
                         display: flex;
                         align-items: center;
                         width: 100%;
                         gap: 1rem;
-                        padding:.5rem 1rem;
+                        padding: .5rem 1rem;
                         background-color: var(--box-background-color);
                         border-radius: 1rem 1rem 0 0;
 
                         h3 {
                             font-size: 1.3rem;
-                            color:var(--defined-text-color);
+                            color: var(--defined-text-color);
                         }
 
                         p {
-                            padding-top:.4rem;
-                            font-size: 1.1rem;
+                            padding-top: .4rem;
+                            font-size: 1.2rem;
                         }
 
                         .customerName {
@@ -142,6 +150,7 @@
                             flex: 2;
                             gap: 1rem;
                             border-right: .3px solid var(--border-color);
+
                             &Left {
                                 i {
                                     font-size: 2.1rem;
@@ -156,34 +165,47 @@
                             flex: 2;
                             gap: 1rem;
                             border-right: .3px solid var(--border-color);
-                            &Left {}
 
+                            &Left {
+                            }
+                            
                             &Right {
-                                p{
-                                    color:var(--yellow-color);
+                                
+                                p {
+                                    color: var(--blue-color);
+                                    font-weight:400;
                                 }
                             }
                         }
-                        .shippingFee{
-                            flex:2;
+
+                        .paymentMethod{
+                            flex: 2;
                             border-right: .3px solid var(--border-color);
+                        }
+                        .shippingFee {
+                            flex: 2;
+                            border-right: .3px solid var(--border-color);
+
                             p {
                                 sup {
                                     font-size: 1.2rem;
                                     font-weight: 400;
                                 }
-    
+
                                 font-size:2.5rem;
                                 font-weight:200;
                             }
                         }
-                        .Address{
-                            flex:2;
+
+                        .Address {
+                            flex: 2;
                             border-right: .3px solid var(--border-color);
                         }
-                        .moreActions{
-                            flex:1;
-                            h3{
+
+                        .moreActions {
+                            flex: 1;
+
+                            h3 {
                                 display: flex;
                                 justify-content: center;
                                 align-items: center;
@@ -191,7 +213,7 @@
                                 height: 4rem;
                                 border-radius: 50%;
                                 transition: all .3s ease;
-        
+
                                 &:hover {
                                     background-color: var(--hoverBackground);
                                     cursor: pointer;
@@ -202,117 +224,142 @@
                     }
 
                     &Bottom {
-                        
-width:100%;
-                        .table{
-width:100%;
-border-collapse: collapse;
-border:.3px solid var(--border-color);
-margin-top:1rem;
-thead{
-    tr{
-        th{
-            font-size:1.4rem;
-            font-weight:200;
-            padding:2rem 1rem 2rem 1rem;
-            color:var(--defined-text-color);
-            border-bottom:1px solid var(--yellow-color);
-            &:not(:last-child){
-                border-right: .3px solid var(--border-color);
-            }
-        }
-    }
-}
-tbody{
-    tr{
-        &:nth-child(odd){
-            background-color: var(--box-background-color);
-        }
-        .productUnitSize{
-            font-size:2.5rem;
-                            font-weight:200;
-        }
-        .productPayableAmount{
-            font-size:2.5rem;
-            font-weight: 200;
-        }
-        td{
-            padding:1rem;
-            font-size:1.2rem;
-            font-weight:500;
-            color:var(--dark-grey);
-            &:not(:last-child){
-                border-right: .3px solid var(--border-color);
-            }
 
-            sup{
-                font-size:1.2rem;
-                font-weight: 400;
-            }
-            .productContainer{
-                display:flex;
-                gap:1rem;
-                align-items: center;
-                &Left{
-                    display:flex;
-                    align-items: center;
-                    justify-content: center;
-                    width:6rem;
-                    height:6rem;
-                    overflow:hidden;
+                        width: 100%;
 
-                    .image{
-                        width:100%;
-                        height:100%;
-                        object-fit:cover;
-                    }
-                }
-                &Right{
-                    p{
-                        padding:.4rem 0;
-                    }
-                    h3{
-                        color:var(--defined-text-color);
-                    }
-                    .productProperties{
-                        display:flex;
-                        gap:2rem;
-                    }
-                }
-            }
-        }
+                        .table {
+                            width: 100%;
+                            border-collapse: collapse;
+                            border: .3px solid var(--border-color);
+                            margin-top: 1rem;
+
+                            thead {
+                                tr {
+                                    th {
+                                        font-size: 1.4rem;
+                                        font-weight: 200;
+                                        padding: 2rem 1rem 2rem 1rem;
+                                        color: var(--defined-text-color);
+                                        border-bottom: 1px solid var(--blue-color);
+
+                                        &:not(:last-child) {
+                                            border-right: .3px solid var(--border-color);
+                                        }
+                                    }
+                                }
+                            }
+
+                            tbody {
+                                tr {
+                                    &:nth-child(odd) {
+                                        background-color: var(--box-background-color);
+                                    }
+
+                                    .productUnitSize {
+                                        font-size: 2.5rem;
+                                        font-weight: 200;
+                                    }
+
+                                    .productPayableAmount {
+                                        font-size: 2.5rem;
+                                        font-weight: 200;
+                                    }
+
+                                    td {
+                                        padding: 1rem;
+                                        font-size: 1.2rem;
+                                        font-weight: 500;
+                                        color: var(--dark-grey);
+                                        border-right: .3px solid var(--border-color);
+
+                                        &:not(:last-child) {
+                                            border-right: .3px solid var(--border-color);
+                                        }
+
+                                        sup {
+                                            font-size: 1.2rem;
+                                            font-weight: 400;
+                                        }
+
+                                        .productContainer {
+                                            display: flex;
+                                            gap: 1rem;
+                                            align-items: center;
+
+                                            &Left {
+                                                display: flex;
+                                                align-items: center;
+                                                justify-content: center;
+                                                width: 6rem;
+                                                height: 6rem;
+                                                overflow: hidden;
+
+                                                .image {
+                                                    width: 100%;
+                                                    height: 100%;
+                                                    object-fit: cover;
+                                                }
+                                            }
+
+                                            &Right {
+                                                p {
+                                                    padding: .4rem 0;
+                                                }
+
+                                                h3 {
+                                                    color: var(--defined-text-color);
+                                                    font-size:1.3rem;
+                                                }
+
+                                                .productProperties {
+                                                    display: flex;
+                                                    gap: 2rem;
+                                                }
+                                            }
+                                        }
+                                    }
 
 
-        
-    }
-}
-tfoot{
-    width:100%;
-    padding:0 3rem;
 
-    tr{
-        .subTotal{
-            text-align: right;
-        }
-        td{
-            padding:0 2rem;
-            padding-bottom:2rem;
-        }
-        h3{
-            padding-top:3rem;
-            font-size:1.5rem;
-            color:var(--defined-text-color);
-        }
-        p{
-            font-size:2.5rem;
-            font-weight:200;
-            sup{
-                font-size:1.2rem;
-                font-weight:400;
-            }
-        }
-    }
-}
+                                }
+                            }
+
+                            tfoot {
+                                width: 100%;
+                                padding: 0 3rem;
+
+                                tr {
+                                    .subTotal {
+                                        text-align: right;
+                                    }
+
+                                    td {
+                                        padding: 0 2rem;
+                                        padding-bottom: 2rem;
+                                        // border-top:1px solid var(--blue-color);
+                                        &:not(:last-child) {
+                                            border-right: .3px solid var(--border-color);
+                                        }
+                                    }
+
+                                    h3 {
+                                        padding-top: 3rem;
+                                        font-size: 1.4rem;
+                                        color:var(--defined-text-color);
+                                    }
+
+                                    p {
+                                        font-size: 2.5rem;
+                                        font-weight:200;
+                                        // color:var(--dark-grey);
+
+                                        sup {
+                                            font-size: 1.2rem;
+                                            font-weight: 400;
+                                        }
+                                    }
+                                }
+                            }
                         }
                     }
                 }
