--- a/src/components/utilities/button/Button.module.scss
+++ b/src/components/utilities/button/Button.module.scss
@@ -3,6 +3,7 @@
     display:flex;
     align-items: center;
     color:var(--defined-text-color);
+    text-transform: capitalize;
     gap:1rem;
     background-color:var(--box-background-color);
     border:none;
