--- a/src/components/home/DashHome.module.scss
+++ b/src/components/home/DashHome.module.scss
@@ -6,14 +6,12 @@
     margin:0 auto;
 
     .backgroundColor{
-        background-color: rgba(0, 0, 0, 0.352);
-        width:100vw;
-        height:100vh;
-        position:fixed;
-        z-index:9;
+        width: 100vw;
+        height: 100vh;
+        position: fixed;
+        z-index: 9;
         margin-left: 4rem;
-        filter:blur(50px);
-        display:none;
+        backdrop-filter: blur(7px);
     }
 
     .transactionDatatable{
