--- a/src/components/orders/Orders.module.scss
+++ b/src/components/orders/Orders.module.scss
@@ -1,10 +1,58 @@
 @import "../../mixin";
 
+.addNewContainer{
+    position:fixed;
+    width:100%;
+    margin:0 auto;
+    height:100%;
+    z-index:9;
+    
+    .formContainer{
+        padding:4rem 2rem;
+        backdrop-filter: blur(65px);
+        width:100%;
+        height:100%;
+        .formTopDescription{
+            display:flex;
+            justify-content: space-between;
+            align-items: center;
+            h1{
+                color:var(--defined-text-color);
+            }
+            p{
+                color:var(--defined-text-color);
+                font-size: 1.4rem;
+                display:flex;
+                align-items: center;
+                justify-content: center;
+                gap:1rem;
+                background-color:var(--blue-color);
+                padding:1rem 2rem;
+                border-radius:.8rem;
+                transition:all .3s ease;
+
+                &:hover{
+                    background-color:rgba($color: var(--blue-color), $alpha: 0.8);
+                    cursor:pointer;
+                }
+            }
+        }
+    }
+}
 .container{
     width:97%;
     position: relative;
     margin:0 auto;
-.home{
+
+    .backgroundColor{
+        width: 100vw;
+        height: 100vh;
+        position: fixed;
+        z-index: 9;
+        margin-left: 4rem;
+        backdrop-filter: blur(7px);
+    }
+    .home{
     padding-top:4rem;
     transition:all .4s ease;
     @include respond(tab-port){
@@ -39,9 +87,16 @@
                     }
                 }
                 h1{
-                    font-size:3rem;
+                    font-size:2.1rem;
                     color:var(--defined-text-color);
                     font-weight: 800;
+                    display:flex;
+                    align-items: flex-end;
+                    gap:1rem;
+                    i{
+                        font-size:1.5rem;
+                    }
+
                 }
             }
             .right{
@@ -59,6 +114,91 @@
                 }
                 .icon3{
                     font-size:2rem;
+                }
+            }
+        }
+        .titleDescription{
+            width:70%;
+            margin:2rem 0;
+            p{
+                font-size:1.2rem;
+                line-height:2rem;
+                font-weight:500;
+            }
+        }
+        .orderStatusFilters{
+            .cont{
+                .list{
+                    list-style:none;
+                    display:flex;
+                    gap:2rem;
+                    border-bottom:.3px solid rgb(67, 63, 76);
+                    li{
+                        font-size:1.27rem;
+                        font-weight:500;
+                        padding:1rem .4rem .7rem .4rem;
+                        cursor:pointer;
+
+                    }
+                    .selectedButton{
+                        border-bottom: 3px solid var(--blue-color);
+                        font-weight:600;
+                        color:var(--blue-color);
+                        position:relative;
+                        z-index:4;
+                    }
+                }
+            }
+        }
+
+        .searchAndExports{
+            display:flex;
+            justify-content: space-between;
+            margin-top:3rem;
+            &Left{
+                flex:2;
+                .search{
+                    input{
+                        width:100%;
+                        padding:.8rem 2rem;
+                        border:.3px solid var(--box-background-color);
+                        background-color:var(--box-background-color);
+                    }
+                }
+            }
+            &Right{
+                flex:5;
+                display:flex;
+                justify-content: flex-end;
+                gap:1.5rem;
+
+                .exportsDropdown{
+                    position:relative;
+                    .dropdownItems{
+                        position:absolute;
+                        width:15rem;
+                        right:0;
+                        top:4.6rem;
+                        background: rgba(0, 0, 0, 0.25);
+                                box-shadow: 0 8px 32px 0 rgba(black, 0.37);
+                                backdrop-filter: blur(12px);
+                                -webkit-backdrop-filter: blur(12px);
+                                border-radius: 3px;
+                                border: 1px solid rgba(255, 255, 255, 0.18);
+                        ul{
+                            list-style:none;
+                            li{
+                                padding:.9rem 2rem;
+                                font-size:1.2rem;
+                                font-weight:400;
+
+                                &:hover{
+                                    background-color:var(--border-color);
+                                    cursor:pointer;
+                                }
+                            }
+                        }
+                    }
                 }
             }
         }
