--- a/src/components/orders/table/OrdersTable.module.scss
+++ b/src/components/orders/table/OrdersTable.module.scss
@@ -36,6 +36,7 @@
                     p {
                         padding-top: .4rem;
                         font-size: 1.2rem;
+                        font-weight:600;
                     }
 
                     width:100%;
@@ -59,7 +60,6 @@
                             color: var(--blue-color);
                             padding-top: .5rem;
                             font-size: 1.2rem;
-                            font-weight: 400;
                         }
                     }
 
@@ -82,11 +82,11 @@
 
                         p {
                             font-size: 2.5rem;
-                            font-weight: 200;
+                            font-weight: 500;
 
                             sup {
                                 font-size: 1.2rem;
-                                font-weight: 400;
+                                font-weight: 500;
                             }
 
                         }
@@ -154,6 +154,7 @@
                         p {
                             padding-top: .4rem;
                             font-size: 1.2rem;
+                            font-weight:600;
                         }
 
                         .customerName {
@@ -184,7 +185,6 @@
 
                                 p {
                                     color: var(--blue-color);
-                                    font-weight: 400;
                                 }
                             }
                         }
@@ -201,11 +201,11 @@
                             p {
                                 sup {
                                     font-size: 1.2rem;
-                                    font-weight: 400;
+                                    font-weight: 500;
                                 }
 
                                 font-size:2.5rem;
-                                font-weight:200;
+                                font-weight:500;
                             }
                         }
 
@@ -280,9 +280,9 @@
                                 tr {
                                     th {
                                         font-size: 1.4rem;
-                                        font-weight: 300;
+                                        font-weight: 600;
                                         padding: 2rem 1rem 2rem 1rem;
-                                        color: var(--defined-text-color);
+                                        // color: var(--defined-text-color);
                                         border-bottom: 1px solid var(--blue-color);
 
                                         &:not(:last-child) {
@@ -300,18 +300,18 @@
 
                                     .productUnitSize {
                                         font-size: 2.5rem;
-                                        font-weight: 200;
+                                        font-weight: 500;
                                     }
 
                                     .productPayableAmount {
                                         font-size: 2.5rem;
-                                        font-weight: 200;
+                                        font-weight: 500;
                                     }
 
                                     td {
                                         padding: 1rem;
                                         font-size: 1.2rem;
-                                        font-weight: 500;
+                                        font-weight: 600;
                                         color: var(--dark-grey);
                                         border-right: .3px solid var(--border-color);
 
@@ -321,7 +321,7 @@
 
                                         sup {
                                             font-size: 1.2rem;
-                                            font-weight: 400;
+                                            font-weight: 600;
                                         }
 
                                         .productContainer {
