--- a/src/components/products/Product.module.scss
+++ b/src/components/products/Product.module.scss
@@ -1,44 +1,6 @@
 @import "../../mixin";
 
-.addNewContainer{
-    position:fixed;
-    width:100%;
-    margin:0 auto;
-    height:100%;
-    z-index:9;
-    
-    .formContainer{
-        padding:4rem 2rem;
-        backdrop-filter: blur(65px);
-        width:100%;
-        height:100%;
-        .formTopDescription{
-            display:flex;
-            justify-content: space-between;
-            align-items: center;
-            h1{
-                color:var(--defined-text-color);
-            }
-            p{
-                color:var(--defined-text-color);
-                font-size: 1.4rem;
-                display:flex;
-                align-items: center;
-                justify-content: center;
-                gap:1rem;
-                background-color:var(--blue-color);
-                padding:1rem 2rem;
-                border-radius:.8rem;
-                transition:all .3s ease;
 
-                &:hover{
-                    background-color:rgba($color: var(--blue-color), $alpha: 0.8);
-                    cursor:pointer;
-                }
-            }
-        }
-    }
-}
 .container{
     width:97%;
     position: relative;
@@ -140,8 +102,21 @@
                         font-weight:600;
                         padding:1rem .4rem .7rem .4rem;
                         cursor:pointer;
+                        display:flex;
+                        align-items: center;
+                        justify-content: center;
+                        transition: all .3s ease;
                         border-bottom: 3px solid transparent;
+                        i{
+                            font-size:2rem;
+                            display:flex;
+                            align-items: center;
+                            justify-content: center;
+                        }
 
+                        &:hover{
+                            color:var(--defined-text-color);
+                        }
                     }
                     .selectedButton{
                         border-bottom: 3px solid var(--blue-color);
@@ -194,7 +169,7 @@
                                 padding:.9rem 2rem;
                                 font-size:1.2rem;
                                 font-weight:400;
-
+                                
                                 &:hover{
                                     background-color:var(--border-color);
                                     cursor:pointer;
@@ -212,12 +187,6 @@
         
             
     }
-    
-    // styling the component when the navigation is active
 
-    
-    .bottom{
-        margin-top:4rem;
-    }
 }
 }
