--- a/src/components/orders/table/OrdersTable.module.scss
+++ b/src/components/orders/table/OrdersTable.module.scss
@@ -36,7 +36,7 @@
                     p {
                         padding-top: .4rem;
                         font-size: 1.2rem;
-                        font-weight:600;
+                        font-weight: normal;
                     }
 
                     width:100%;
@@ -154,7 +154,7 @@
                         p {
                             padding-top: .4rem;
                             font-size: 1.2rem;
-                            font-weight:600;
+                            font-weight: normal;
                         }
 
                         .customerName {
@@ -240,23 +240,27 @@
                                 -webkit-backdrop-filter: blur(12px);
                                 border-radius: 10px;
                                 border: 1px solid rgba(255, 255, 255, 0.18);
-                                .dropdownHeader{
-                                    padding:1rem 2rem;
-                                    p{
-                                        font-weight:600;
-                                        color:var(--defined-text-color);
+
+                                .dropdownHeader {
+                                    padding: 1rem 2rem;
+
+                                    p {
+                                        font-weight: 600;
+                                        color: var(--defined-text-color);
                                     }
                                 }
-                                .dropdownContent{
-                                    ul{
-                                        list-style-type:none;
-                                        li{
-                                            padding:1rem;
-                                            font-size:1.2rem;
 
-                                            &:hover{
-                                                background-color:var(--border-color);
-                                                cursor:pointer;
+                                .dropdownContent {
+                                    ul {
+                                        list-style-type: none;
+
+                                        li {
+                                            padding: 1rem;
+                                            font-size: 1.2rem;
+
+                                            &:hover {
+                                                background-color: var(--border-color);
+                                                cursor: pointer;
                                             }
                                         }
                                     }
@@ -279,7 +283,7 @@
                             thead {
                                 tr {
                                     th {
-                                        font-size: 1.4rem;
+                                        font-size: 1.2rem;
                                         font-weight: 600;
                                         padding: 2rem 1rem 2rem 1rem;
                                         // color: var(--defined-text-color);
@@ -333,8 +337,8 @@
                                                 display: flex;
                                                 align-items: center;
                                                 justify-content: center;
-                                                width: 6rem;
-                                                height: 6rem;
+                                                width: 8rem;
+                                                height: 8rem;
                                                 overflow: hidden;
 
                                                 .image {
@@ -351,7 +355,7 @@
 
                                                 h3 {
                                                     color: var(--defined-text-color);
-                                                    font-size: 1.3rem;
+                                                    font-size: 1.2rem;
                                                 }
 
                                                 .productProperties {
@@ -388,14 +392,14 @@
 
                                     h3 {
                                         padding-top: 3rem;
-                                        font-size: 1.4rem;
+                                        font-size: 1.2rem;
                                         color: var(--defined-text-color);
                                     }
 
                                     p {
                                         font-size: 2.5rem;
-                                        font-weight: 200;
-                                        // color:var(--dark-grey);
+                                        font-weight: 500;
+                                        color: var(--dark-grey);
 
                                         sup {
                                             font-size: 1.2rem;
