--- a/src/components/products/Product.module.scss
+++ b/src/components/products/Product.module.scss
@@ -124,6 +124,10 @@
                         color:var(--blue-color);
                         position:relative;
                         z-index:4;
+
+                        &:hover{
+                            color:var(--blue-color);
+                        }
                     }
                 }
             }
