--- a/src/components/products/addNew/AddNew.module.scss
+++ b/src/components/products/addNew/AddNew.module.scss
@@ -4,8 +4,68 @@
 .container{
     .addNewFormContainer{
         .formContainer{
+            display:flex;
+            margin-top:3rem;
+            
             .left{
-                
+                flex:1;
+                .formGroup{
+                    display:flex;
+                    flex-direction: column;
+                    label{
+                        font-size:1.2rem;
+                        font-weight: 600;
+                        margin-bottom:1rem;
+                        color:var(--defined-text-color);
+                        display:flex;
+                        align-items: center;
+                        gap:.9rem;
+
+                        span{
+                            display:flex;
+                            align-items: flex-end;
+                            justify-content: center;
+                            font-size:1.2rem;
+                            color:var(--dark-grey);
+                        }
+                    }
+                    input{
+                        padding:1.1rem 1rem;
+                        border-radius: .8rem;
+                        background-color:var(--box-background-color);
+                        border:.3px solid transparent;
+
+                        &:not(:last-child){
+                            margin-bottom: 2.5rem;
+                        }
+
+                        &:focus{
+                            outline:none;
+                            border:.3px solid rgba(255, 255, 255, 0.074);
+                        }
+                    }
+                    .productName{
+                        margin-bottom: 2.5rem;
+                    }
+                }
+
+                .categoryGroups{
+                    display:flex;
+
+                    .formGroup:first-child{
+                        flex:3;
+
+                        input{
+                            width:100%;
+                        }
+                    }
+                    .formGroup:nth-child(2){
+                        flex:1;
+                    }
+                }
+            }
+            .right{
+                flex:1;
             }
         }
     }
